--- a/etch.html
+++ b/etch.html
@@ -1,70 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./bundle.js" type="text/javascript"></script>
 <script>
+function allowDrop(e) {
+  e.preventDefault();
+}
 
+function drag(e) {
+  e.dataTransfer.setData("text", e.target.id);
+}
 
-$(document).ready(function(){
-
-function newGrid() {
-  var container = $("#container");
-
-  var cheight = container.height();
-  var cwidth = container.width();
-
-  var input = prompt("How many grids do you want?");
-
-  var gheight = cheight / input;
-  var gwidth = cwidth / input;
-
-  console.log(gheight);
-  console.log(gwidth);
-
-  window.input = input;
-
-  var gridCount = input * input;
-
-  for (var i = 0; i < gridCount; i++){
-      $("#container").append(`<div class='grid' id=${i}></div>`);
-  };
-
-  $(".grid").height(gheight + "px").width(gwidth + "px");
-
-  $(".grid").on("click", function() {
-    $(this).toggleClass("black");
-  })
-};
-
-$(".create-grid").on("click", function() {
-  $(".grid").remove();
-  newGrid();
-});
-
-$(".solve").on("click", function() {
-  const processChunk = parseInt(window.input);
-  let result = [];
-  let chunk= [];
-  Array.from($(".grid")).forEach(block => {
-
-    if (block.className.includes("black")) {
-      chunk.push("block");
-    } else {
-      chunk.push("open");
-    }
-
-    if (chunk.length === processChunk) {
-      result.push(chunk);
-      chunk = [];
-    }
-  })
-  console.log(result);
-  return result;
-});
-
-
-});
-
+function drop(e) {
+  e.preventDefault();
+  var data = e.dataTransfer.getData("text");
+  e.target.appendChild(document.getElementById(data));
+}
 </script>
 <style>
 * {
@@ -77,8 +29,8 @@ $(".solve").on("click", function() {
 #container {
   position:relative;
   background:white;
-  width:1000px;
-  height:1000px;
+  width:500px;
+  height:500px;
   margin:0 auto;
 }
 
@@ -99,6 +51,14 @@ button {
 
 .black {
   background: black;
+}
+
+#start {
+  background: green;
+}
+
+#end {
+  background: red;
 }
 
 </style>
