Work orthogonal movement

--- a/etch.html
+++ b/etch.html
@@ -53,6 +53,10 @@ button {
   background: black;
 }
 
+.blue {
+  background: blue;
+}
+
 #start {
   background: green;
 }
@@ -69,6 +73,7 @@ button {
     <button>GENERATE GRID</button>
     <button class="solve">SOLVE</button>
     <button>VISUAL SOLVE</button>
+    <button class="clear">CLEAR</button>
   </div>
   <div id="container">
   </div>
