--- a/etch.html
+++ b/etch.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Joey P's Path Finding</title>
+  <link rel="stylesheet" type="text/css" href="./path_find.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="./bundle.js" type="text/javascript"></script>
 <script>
@@ -18,72 +20,27 @@ function drop(e) {
   e.target.appendChild(document.getElementById(data));
 }
 </script>
-<style>
-* {
-  margin:0;
-  padding:0;
-}
 
-
-
-#container {
-  position:relative;
-  background:white;
-  width:500px;
-  height:500px;
-  margin:0 auto;
-}
-
-
-.grid {
-  float:left;
-  background:white;
-  box-shadow: inset 0 0 1px silver;
-}
-
-body {
-  text-align:center;
-
-}
-button {
-
-}
-
-.black {
-  background: black;
-}
-
-
-.purple {
-  background: purple;
-}
-.blue {
-  background: blue;
-}
-
-.yellow {
-  background:yellow;
-}
-
-#start {
-  background: green;
-}
-
-#end {
-  background: red;
-}
-
-</style>
 </head>
 <body>
+  <h1>Joey P's Path Finder</h1>
+  <br />
+  <br />
+  <h2>Instructions</h2>
+  <p>Click Create to generate a new grid (Recommended sizes are 10, 15, 20)</p>
+  <p>Simply drag the Green Square (Start Point) and Red Square (End Point) on the grid and click Solve</p>
+  <p>You can also create custom collison block simply by clicking any one of the grid which will then indicate by changing to black</p>
+  <p>If you want to clear the previous calculated path, just click the Clear button! Have Fun!</p>
   <div class="control-panel">
-    <button class="create-grid">CREATE GRID</button>
-    <button>GENERATE GRID</button>
+    <button class="create-grid">CREATE</button>
     <button class="solve">SOLVE</button>
-    <button>VISUAL SOLVE</button>
     <button class="clear">CLEAR</button>
   </div>
+  <div class="start-end"></div>
   <div id="container">
+    <canvas width="500" height="500" id="canvas"></canvas>
   </div>
+  <a href="http://www.github.com/josephpuchalski">Github</a>
+  <a href="http://www.linkedin.com/in/josephpuchalski">LinkedIn</a>
 </body>
 </html>
