--- a/etch.html
+++ b/etch.html
@@ -16,7 +16,7 @@
     <div class="middle-box">
       <div class="instructions">
       <h2>Instructions</h2>
-      <p>
+      <!-- <p>
       In the Control Panel on the right side, please type a grid size and click "Create Grid" (Recommended Sizes are 70, 80, 90, 100).
 
       <p>You can generate a grid simply by clicking "Fill Grid." You can keep clicking this until you find a grid pattern that you enjoy.</p>
@@ -26,11 +26,19 @@
       This will place a red colored "End" Square and you can watch the magic begin! You can now simply type "E" over different areas and it will recalculate the path.</p>
     <p>  If you are feeling crafty, you can also design your own pattern. You can toggle the black squares by either clicking on them or typing "B".
       Enjoy and Have Fun!</p>
-      </p>
+      </p> -->
+      <p>1. Enter a grid size and click "Create Grid" (Recommended Sizes are 50-100)</p>
+      <p>2. You can fill the grid easily by clicking "Fill Grid," you can keep clicking until you find a pattern you like.</p>
+      <p>3. Place the start point by hovering over a grid block and typing "S"</p>
+      <p>4. Place the end point by typing "E" and watch it find the shortest path right before your eyes!</p>
+      <p>After it renders the shortest path, you can keep moving the "E" point again and it will recalculate the new route</p>
+      <p>Have fun and enjoy!</p>
+
+
       <h2>Background</h2>
       <p>
         A path finding JavaScript program which utilizes the A* Algorithm to calculate the shortest path.
-        The program also uses the same A* Algorithm to generate its own complex pathways for traversal demonstration.
+        The program also uses the same A* Algorithm to generate its own complex maps for traversal demonstration.
         I wrote the program in mind to be easily integrated into other apps for point and click behavior with collision avoidance.
       </p>
       </div>
@@ -48,9 +56,11 @@
           <input type="radio" name="mode" value="o">Orthogonal Only
           <input type="radio" name="mode" value="odnc">Orthogonal + Diagonal
         </form> -->
+        <img src="https://s3.us-east-2.amazonaws.com/travelscape-pro/runner.png" />
       </div>
     </div>
     <footer>
+      <a target="_blank" href="https://josephpuchalski.github.io/"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
       <a target="_blank" href="http://www.github.com/josephpuchalski"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
       <a target="_blank" href="http://www.linkedin.com/in/josephpuchalski"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a>
     </footer>
