--- a/etch.html
+++ b/etch.html
@@ -56,7 +56,8 @@
           <input type="radio" name="mode" value="o">Orthogonal Only
           <input type="radio" name="mode" value="odnc">Orthogonal + Diagonal
         </form> -->
-        <img src="https://s3.us-east-2.amazonaws.com/travelscape-pro/runner.png" />
+        <img class="runner" src="https://s3.us-east-2.amazonaws.com/travelscape-pro/2.png" />
+        <!-- <img class="runner" src="https://s3.us-east-2.amazonaws.com/travelscape-pro/seeker.gif" /> -->
       </div>
     </div>
     <footer>
