Add production read me

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
   <title>Joey P's Path Finding</title>
-  <link rel="stylesheet" type="text/css" href="./path_find.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/path_find.css">
   <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="./bundle.js" type="text/javascript"></script>
+<script src="./lib/bundle.js" type="text/javascript"></script>
 
 </head>
 <body>
