--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Joey P's Path Finding</title>
+  <link rel="icon" type="image/png" href="https://s3.us-east-2.amazonaws.com/travelscape-pro/2.png">
   <link rel="stylesheet" type="text/css" href="./assets/css/path_find.css">
   <link rel="stylesheet" href="./assets/css/font-awesome.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -9,6 +10,7 @@
 
 </head>
 <body>
+
   <div class="main-box">
     <header>
       <h1>Joey P's Path Finder</h1>
@@ -31,7 +33,9 @@
         I wrote the program in mind to be easily integrated into other apps for point and click behavior with collision avoidance.
       </p>
       </div>
-      <div id="container"></div>
+      <div id="container">
+      </div>
+
       <div class="control-panel">
         <h2>Controls</h2>
         <input type="text" name="fname" placeholder="Enter a Grid Size" value="" id="size">
